--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "porfolio-ui",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://MrMurly.github.io",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
